Initial commit with working Tailwind + Vite setup

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "copy-of-sims---sports-information-management-system",
+  "name": "SIMS3",
   "private": true,
   "version": "0.0.0",
   "type": "module",
